<resources>
    <string name="app_name">Pizz_Order_Fragments</string>

    <string name="name">ДІАБОЛА</string>
    <string name="sort">Італійська, гостра</string>
    <string name="ingredients">домашній томатний соус, салямі піканте,перці болгарський та чілі, маслини і моцарела</string>
    <string name="price">123грн</string>
    <string name="Button">Замовити</string>
    <string name="Button1">Скасувати замовлення</string>
    <string name="status">Не замовлено</string>
    <string name="status1">Замовлено</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
